# financial-cyber-fraud-lab

./: .gitignore  AI_USAGE.md  LICENSE  README.md  REPORT_RUN_RESULTS.txt  SECURITY.md  TEST_RESULTS.txt  app.py  pyproject.toml  requirements.txt
data/: README.md  synthetic_transactions.csv
docs/: CAREER_MAP.md  GITHUB_UPLOAD_STEPS.md  INTERVIEW_TALK_TRACK.md  MODEL_CARD.md  REGULATORY_MARKET_MAP.md
reports/: README.md  alerts.csv
scripts/: generate_alerts.py
sql/: investigation_queries.sql  schema.sql
src/financial_cyber_fraud/: __init__.py  features.py  metrics.py  scoring.py  validation.py
tests/: test_features.py  test_metrics.py  test_scoring.py  test_validation.py
